--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
         "service_worker": "js/background.js"
     },
     "action": {
-      "default_popup": "popup.html",
+      "default_popup": "html/popup.html",
       "default_icon": "icon.png"
     },
     "content_scripts": [
